第二次提交

--- a/login.html
+++ b/login.html
@@ -18,6 +18,10 @@
 			<div class="center_right floatl">
 			<div class="clear"></div>
 				<div class="login">
+					<div id="warning" >
+						<img src="image/warning.JPG"> 
+						<span></span>
+					</div>
 					<form action="index.html" method="get" id="form1">
 						<span class="login_type">账号登录
 							<p><a href="">手机动态码登录
