第四次提交

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 	<title>美团</title>
 	<link rel="icon" href="image/favicon.ico" sizes="16x16 32x32">
 	<link rel="stylesheet" type="text/css" href="css/index.css">
+	<script type="text/javascript" src="js/jquery.min.js"></script>
+	<script type="text/javascript" src="js/jquery.flipcountdown.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/jquery.flipcountdown.css" />
 </head>
 <body>
 	<div class="log_reg">
@@ -27,8 +30,8 @@
 	<div class="main">
 		<div class="header">
 			<div class="heander_left">
-				<a href="#">
-					<img src="image/美团_03.jpg" alt="" style="float:left"
+				<a href="#" >
+					<img src="image/美团_03.jpg" alt="" style="float:left;border:none"
 						/>
 				</a>
 				<div class="taiyuan" >
@@ -162,7 +165,7 @@
 						<a href="" >生活服务</a>
 					</span>
 					<span class="nav_right" style="width:70%;height:53px;">
-						<a href="" class="floatl padl22">婚纱摄影</a>
+						<a href="" class="floatl padl22" style="">婚纱摄影</a>
 						&nbsp;
 						<b class="floatr">></b>
 						<a href="" class="floatr">个性写真</a>
@@ -612,7 +615,7 @@
 					</div>
 					<div class="content_pal">
 						<h3 class="label">
-							<i class="hot"></i>
+							<img src="image/meituan_03.jpg">
 						</h3>
 						<div class="filter">
 							<ul>
@@ -656,7 +659,7 @@
 					</div>
 					<div class="content_pal">
 						<h3 class="label">
-							<i class="allarea"></i>
+							<img src="image/meituan_04.jpg">
 						</h3>
 						<div class="filter">
 							<ul>
@@ -689,7 +692,7 @@
 					</div>
 					<div class="content_pal">
 						<h3 class="label">
-							<i class="hotsq"></i>
+							<img src="image/meituan_06.jpg">
 						</h3>
 						<div class="filter">
 							<ul>
@@ -905,12 +908,23 @@
 					<img src="image/美团_17.jpg" ></div>
 			</div>
 		</div>
+
+	<aside>
+
+		<div class="countdown">
+			<img src="image/click.jpg">
+			<span>
+				<a href=""></a>
+				<div id="retroclockbox1"></div>
+			</span>
+		</div>	
+	</aside>
 	</div>
-		<script src="js/carousel.js"></script>
+
+
+
+	<script src="js/carousel.js"></script>
 	<script src="js/index.js"></script>
-
-	<!-- 下拉框 -->
-
 
 </body>
 </html>
