--- a/index.html
+++ b/index.html
@@ -934,10 +934,10 @@
 												
 												<span class="deal-mark-mian"></span>
 											</span>
-											【柳巷商业区】金诺郎韩式自助
+											【柳巷商业区】韩式自助
 										</a>
 										<div class="clear"></div>
-										<p>￥56</p><i>已售12196</i>
+										<p>￥56</p><i>已售2764</i>
 										<div class="deal-tile-bottom">
 											<span>手机购买立减￥15</span>
 										</div>
