--- a/index.html
+++ b/index.html
@@ -925,11 +925,11 @@
 								<span class="deal-mark2">
 									<span class="deal-mark-mian"></span>
 								</span>
-								【柳巷商业区】金诺郎韩式自助
+								【柳巷商业区】韩式自助
 							</a>
 							<div class="clear"></div>
 							<p>￥56</p>
-							<i>已售12196</i>
+							<i>已售2196</i>
 							<div class="deal-tile-bottom">
 								<span>手机购买立减￥15</span>
 							</div>
