--- a/index.html
+++ b/index.html
@@ -921,7 +921,7 @@
 						</div>
 						<div class="deal-tile floatl">
 							<a href="#">
-								<img src="image/center2.webp" />
+								<img src="image/center2.jpg" />
 								<span class="deal-mark2">
 									<span class="deal-mark-mian"></span>
 								</span>
@@ -936,7 +936,7 @@
 						</div>
 						<div class="deal-tile floatl">
 							<a href="">
-								<img src="image/center3.webp" />
+								<img src="image/center3.jpg" />
 								<span class="deal-mark2">
 									<span class="deal-mark-dai"></span>
 								</span>
@@ -951,7 +951,7 @@
 						</div>
 						<div class="deal-tile floatl">
 							<a href="javascript:void(0)">
-								<img src="image/center4.webp" />
+								<img src="image/center4.jpg" />
 								<span class="deal-mark2">
 									<span class="deal-mark-dai"></span>
 									<span class="deal-mark-mian"></span>
@@ -968,7 +968,7 @@
 						</div>
 						<div class="deal-tile floatl" style="border:none">
 							<a href="#">
-								<img src="image/center5.webp" />
+								<img src="image/center5.jpg" />
 								<span class="deal-mark2">
 									<span class="deal-mark-tao"></span>
 									<span class="deal-mark-mian"></span>
