--- a/index.html
+++ b/index.html
@@ -1052,6 +1052,9 @@
 				<p><img src="image/police.png"><a href=""> 京公网安备11010502025545号</a></p>
 				<div class="end"><a href=""><img src="image/s0_00.png"><img src="image/s0_01.png"><img src="image/s0_02.png"></a></div>
 			</div>
+			<div id="share">
+				<a id="totop" title="">返回顶部</a>
+			</div>
 			<script src="js/carousel.js"></script>
 			<script src="js/index.js"></script>
 		</body>
